--- a/Map/EventList/EventList.html
+++ b/Map/EventList/EventList.html
@@ -2,54 +2,59 @@
 <html lang="en-gb">
 
 <head>
-    <meta name="description" content="catalogue and shopping website">
     <!--helps search engines define what the purpose of the site is-->
+    <meta name="description" content="catalogue and shopping website">
     <meta name="keywords" content="shopping, search, catalogue">
-    <meta charset="utf-8">
     <!--defines correct character set-->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
     <!--ensures site will render correctly on all platforms, primarily mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--links to the Boostrap CDN-->
     <link rel="stylesheet" href="../../css/styles.css" />
+    <!--links to the Boostrap CDN-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <!-- jquery link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <!-- bootstrap js link -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <!-- <script src="../js/data.js"></script> -->
+    <!-- google map api and jquery links -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6QCGqF325m9QTLFst-qHTbE1lUaePKHY"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+    <!-- indexeddb wrapper and main javascript file links -->
     <script src="../../js/main.js"></script>
     <script src="../../js/lib/indexeddb.js"></script>
 
-    <title>Catalogue Website Store Locator</title>
     <!--title of site-->
+    <title>Catalogue Website Shop</title>
 
 </head>
 
 <body>
-
-    <!--creates search bar form-->
+    <!--defines type of navbar and makes navbar dark and controls spacing of items-->
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <!--makes navbar dark and controls spacing of items-->
-        <a class="navbar-brand" href="../../home/HomePage.html">Logo</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+        <!-- logo link to home page -->
+        <a class="navbar-brand" href="../../home/HomePage.html">
+            <img src="../../images/Misc/trolley.png" alt="Trolley Logo" width="50" height="50">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <!--defines type of navbar-->
+                <!--creates search bar form-->
                 <li class="nav-item active">
-                    <div id="search" class="">
-                        <form class="form-inline" action="../Search/results.html">
+                    <div id="search">
+                        <!-- search form goes to search results page -->
+                        <form class="form-inline" action="../../Search/results.html">
                             <input class="form-control mr-sm-2" type="text" placeholder="Search">
                             <button class="btn btn-success" type="submit">Search</button>
                         </form>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <!--link to home page (null and void on this page but better than an empty button)-->
+                    <!--link to home page-->
                     <a class="nav-link" href="../../home/HomePage.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
@@ -81,16 +86,16 @@
     <div id="login" class="container">
         <div class="form-group">
             <label for="email">Email:</label>
-            <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
             <!--defines type of input, id, placeholder and requires user to make input-->
+            <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
         </div>
         <div class="form-group">
             <label for="key">Password:</label>
-            <input type="password" class="form-control" id="key" placeholder="Enter password" name="key" encrypt="bcrypt" salt="abc..." rounds="4" required>
             <!--defines type of input, id, placeholder and requires user to make input-->
+            <input type="password" class="form-control" id="key" placeholder="Enter password" name="key" required>
         </div>
-        <button type="submit" id="btnSubmitLogin" class="btn btn-primary">Submit</button>
         <!--submit button-->
+        <button type="submit" id="btnSubmitLogin" class="btn btn-primary">Submit</button>
         </form>
     </div>
 
