--- a/home/HomePage.html
+++ b/home/HomePage.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <!--ensures site will render correctly on all platforms, primarily mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <link rel="stylesheet" href="../css/styles.css" />
     <!--links to the Boostrap CDN-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -18,6 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!-- indexeddb wrapper and main javascript file links -->
+    <script src="../js/CookieHandler.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/lib/indexeddb.js"></script>
 
@@ -33,7 +34,8 @@
         <a class="navbar-brand" href="../home/HomePage.html">
             <img src="../images/Misc/trolley.png" alt="Trolley Logo" width="50" height="50">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -85,15 +87,18 @@
         </div>
         <div class="form-group">
             <label for="key">Password:</label>
-            <input type="password" class="form-control" id="key" placeholder="Enter password" name="key" encrypt="bcrypt" salt="abc..." rounds="4" required>
+            <input type="password" class="form-control" id="key" placeholder="Enter password" name="key"
+                encrypt="bcrypt" salt="abc..." rounds="4" required>
             <!--defines type of input, id, placeholder and requires user to make input-->
         </div>
-        <button type="submit" id="btnSubmitLogin" class="btn btn-primary">Submit</button>
+        <button type="button" id="btnSubmitLogin" class="btn btn-primary">Submit</button>
         <!--submit button-->
-        </form>
+        <!-- </form> -->
     </div>
 
-    <div class="title" id="homeTitle"><h1>Welcome to <b>Shops 'R' Us</b></h1></div>
+    <div class="title" id="homeTitle">
+        <h1>Welcome to <b>Shops 'R' Us</b></h1>
+    </div>
 
     <!--creates carousel-->
     <div class="container mt-3">
@@ -129,6 +134,7 @@
         </div>
 
     </div>
+
 
 </body>
 
