--- a/Login/crud.html
+++ b/Login/crud.html
@@ -98,7 +98,6 @@
             <!--defines type of input, id, placeholder and requires user to make input-->
             <input type="password" class="form-control" id="key" placeholder="Enter password" name="key" required>
         </div>
-        <!--submit button-->
         <button type="submit" id="btnSubmitLogin" class="btn btn-primary">Submit</button>
         </form>
     </div>
@@ -139,7 +138,7 @@
 
                     <img src="" alt="Image preview..." id="bannerImg"> <br /> <br />
                 </div>
-                <input type="submit" id="btnSaveItem" value="Save">
+                <input type="submit" id="btnSaveItem" value="Save" >
 
             </form>
         </div>
@@ -155,19 +154,19 @@
                 <input type="text" id="txtCatName" name="catName" required="required"> <br /> <br />
                 <label> Category Description: </label> <br />
                 <input type="text" id="txtCatDesc" name="catDesc" required="required"> <br /> <br />
-                <input type="submit" id="btnAddCat" value="Add">
+                <input type="submit" id="btnAddCat" value="Add" >
             </form>
         </div>
         <div id="divCatList" class="container">
         </div>
 
         <!-- displays category list to delete/update -->
-        <button class="accordion accordionUpdate">Update & Delete Categories</button>
+        <!-- <button class="accordion accordionUpdate">Update & Delete Categories</button>
         <div class="panel">
             <div id="divCategoryList" class="container">
                 <h2>Category List</h2>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <!-- form for add subcategory func, links to AddSubcategory.js -->
