--- a/Map/EventList/EventList.html
+++ b/Map/EventList/EventList.html
@@ -83,14 +83,14 @@
     </nav>
 
     <!--creates login form-->
-    <div id="login" class="container">
+    <div id="login" class="formContainer">
         <div class="form-group">
-            <label for="email">Email:</label>
+            <label for="email">Email</label>
             <!--defines type of input, id, placeholder and requires user to make input-->
             <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
         </div>
         <div class="form-group">
-            <label for="key">Password:</label>
+            <label for="key">Password</label>
             <!--defines type of input, id, placeholder and requires user to make input-->
             <input type="password" class="form-control" id="key" placeholder="Enter password" name="key" required>
         </div>
@@ -102,7 +102,7 @@
     <div class="title"><h1>Find Your Nearest Store</h1></div>
 
     <!--placeholder for Google Map, javascript loads map-->
-    <div id="mapInput" style="width: 650px; height: 450px;"></div>
+    <div id="mapInput" style="width: 750px; height: 450px;"></div>
 
     <script src="./EventList.js"></script>
     <script src="./EventListDAO.js"></script>
