--- a/Update/Update.html
+++ b/Update/Update.html
@@ -80,14 +80,14 @@
     </nav>
 
     <!--creates login form-->
-    <div id="login" class="container">
+    <div id="login" class="formContainer">
         <div class="form-group">
-            <label for="email">Email:</label>
+            <label for="email">Email</label>
             <!--defines type of input, id, placeholder and requires user to make input-->
             <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
         </div>
         <div class="form-group">
-            <label for="key">Password:</label>
+            <label for="key">Password</label>
             <!--defines type of input, id, placeholder and requires user to make input-->
             <input type="password" class="form-control" id="key" placeholder="Enter password" name="key" required>
         </div>
